k8s/overlays/prod/service-endpoints.yaml
apiVersion: v1
kind: Service
metadata:
  name: linka-frontend
  namespace: linka-prod
spec:
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: v1
kind: Endpoints
metadata:
  name: linka-frontend
  namespace: linka-prod
subsets:
  - addresses:
      - ip: 200.129.40.162
    ports:
      - port: 3000
        protocol: TCP
