k8s/overlays/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: linka-ingress
  namespace: linka-prod
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
    - host: selinka.ufc.br
      http:
        paths:
          - path: /api/
            pathType: Prefix
            backend:
              service:
                name: linka-api
                port:
                  number: 8000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: linka-frontend
                port:
                  number: 3000
  tls:
    - hosts:
        - selinka.ufc.br
      secretName: selinka-tls
